<resources>
    <string name="app_name">DexterLab</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="screen_background">screen background</string>
    <string name="repeat_password">repeat password</string>
    <string name="weapon">weapon</string>
    <string name="dexter">dexter</string>
    <string name="usage">Usage:</string>
    <string name="technical_specifications_and_schema">Technical specifications and schema:</string>
    <string name="effective_versus">Effective versus:</string>
</resources>
