<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.velev.dexterlab.views.signUp.SignUpActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <EditText
            style="@style/et_box"
            android:hint="@string/username"
            android:id="@+id/et_username"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <EditText
            style="@style/et_box"
            android:hint="@string/password"
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_below="@+id/et_username"
            android:layout_centerHorizontal="true"/>

        <EditText
            style="@style/et_box"
            android:hint="@string/repeat_password"
            android:id="@+id/et_repeat_password"
            android:inputType="textPassword"
            android:layout_below="@+id/et_password"
            android:layout_centerHorizontal="true"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_add"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
